# Neurips-VLA

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
paper_results/: __init__.py  paper_tables.py
robogym/: __init__.py  config.py  demo.py
robogym/analysis/: __init__.py  correlation.py  figures.py  human_study.py  loader.py  tables.py
robogym/assets/: __init__.py  generator.py
robogym/augmentation/: __init__.py  code_agent.py  pipeline.py  scoring_synthesizer.py
robogym/data/: __init__.py  build_dataset.py  export.py  trajectory_generator.py
robogym/envs/: __init__.py  _smoothing.py  base.py  libero_env.py  physics_sim.py  synthetic_env.py
robogym/metrics/: __init__.py  aggregate.py  dtw.py  paper_metrics.py  safety.py  sparc.py  trajectory_evaluator.py
robogym/policies/: __init__.py  base.py  generic_client.py  mock.py  model_zoo.py  openpi_pi0.py  openvla_oft.py  oracle.py
robogym/runners/: __init__.py  run_eval.py  run_libero_eval_custom_metrics.py  run_libero_eval_pi05.py  suites.py
robogym/tasks/: __init__.py  base.py  registry.py
robogym/tasks/memory_sequential/: __init__.py  sim.py  tasks.py
robogym/tasks/physical_intuition/: __init__.py  maze.py  maze.xml  seesaw.py  sim.py
robogym/tasks/symbolic_geometric/: __init__.py  sim.py  tasks.py
scripts/: finetune_openvla_oft.sh  finetune_pi05.sh  generate_expert_dataset.sh  reproduce_paper_results.sh  run_openvla_oft.sh  run_pi05.sh
tests/: test_metrics.py  test_pipeline.py  test_pipeline_full.py  test_tasks.py
